syntax = "proto3";

package auth.v1;

option go_package = "github.com/parking-super-app/pkg/proto/auth/v1;authv1";

service AuthService {
  // ValidateToken validates a JWT token and returns user info
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);

  // GetUser retrieves user information by ID
  rpc GetUser(GetUserRequest) returns (UserResponse);

  // GetUserByPhone retrieves user information by phone number
  rpc GetUserByPhone(GetUserByPhoneRequest) returns (UserResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string phone = 3;
  int64 expires_at = 4;
  string error_message = 5;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserByPhoneRequest {
  string phone = 1;
}

message UserResponse {
  string id = 1;
  string phone = 2;
  string email = 3;
  string full_name = 4;
  string status = 5;
  string created_at = 6;
  string updated_at = 7;
}
